--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-		<input id="block_id" placeholder="Enter block id"/>
-  <input id="colour_id" placeholder="Enter colour Hexcode" />
+		<input id="block_id" placeholder="Accio ipsum dolor"/>
+  <input id="colour_id" placeholder="join course, solve assignments" />
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
 </div>
