--- a/main.html
+++ b/main.html
@@ -10,10 +10,11 @@
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-		<input id="block_id" placeholder="Accio ipsum dolor"/>
+	<input id="block_id" placeholder=/>
   <input id="colour_id" placeholder="join course, solve assignments" />
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
+  <p>Accio ipsum dolor sit amet, join course, solve assignments</p>
 </div>
   <div class="grid-container">
     <div class="grid-item" id="1">1</div>
