--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-	<input id="block_id" placeholder=/>
+	<input id="block_id" placeholder="join course, solve assignments"/>
   <input id="colour_id" placeholder="join course, solve assignments" />
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
