--- a/main.html
+++ b/main.html
@@ -10,22 +10,22 @@
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-	<input id="block_id" placeholder="Enter block id"/>
-	<input id="colour_id" placeholder="Enter colour Hexcode" />
+	<input id="block_id" placeholder=/>
+  <input id="colour_id" placeholder="join course, solve assignments" />
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
   <p>Accio ipsum dolor sit amet, join course, solve assignments</p>
 </div>
   <div class="grid-container">
-    <div class="grid-item" id="1">1</div>
-    <div class="grid-item" id="2">2</div>
-    <div class="grid-item" id="3">3</div>
-    <div class="grid-item" id="4">4</div>
-    <div class="grid-item" id="5">5</div>
-    <div class="grid-item" id="6">6</div>
-    <div class="grid-item" id="7">7</div>
-    <div class="grid-item" id="8">8</div>
-    <div class="grid-item" id="9">9</div>
+    <div class="grid-item" id="1"><p>Accio ipsum</p></div>
+    <div class="grid-item" id="2"><p>dolor sit</p></div>
+    <div class="grid-item" id="3"><p>amet, join course,</p></div>
+    <div class="grid-item" id="4"><p>solve assignments</p></div>
+    <div class="grid-item" id="5"><p>get placed</p></div>
+    <div class="grid-item" id="6"><p>above 5 lpa</p></div>
+    <div class="grid-item" id="7"><p>and live</p></div>
+    <div class="grid-item" id="8"><p>life king</p></div>
+    <div class="grid-item" id="9"><p>Accio ipsum</p></div>
   </div>
 
 
